# hathitrustPDF

./: pyproject.toml
hathitrustPDF/: __main__.py
tests/: test_hathi.py
